# 3dgnome-ng

./: .gitignore  AGENTS.md  AUDIT.md  Makefile  README.md  main.py  plan-cudammcParityRewrite.prompt.md  pyproject.toml  requirements.txt  to_cif.py  verify_algorithm.py
3dnome/: Merge.PET_cluster.anchors.pl  README  makefile  segment_split_midgaps.txt
3dnome/MC/: Anchor.cpp  BedRegion.cpp  BedRegions.cpp  BedRegions.h  Chromosome.cpp  Chromosome.h  ChromosomesSet.cpp  Cluster.cpp  Cluster.h  Heatmap.cpp  Heatmap.h  HierarchicalChromosome.cpp  HierarchicalChromosome.h  InteractionArc.cpp  InteractionArcs.cpp  InteractionArcs.h  LooperSolver.cpp  LooperSolver.h  README.md  Settings.cpp  Settings.h
3dnome/MC/tools/: main.cpp
3dnome/sample_data/: chr14_template.txt  heat_dist_segment.heat  loops_chr14.hcm
data/: loops_chr1_18288319_20307135_0.hcm  loops_chr1_18288319_20307135_0.hcm.smooth.cif  loops_chr1_18288319_20307135_0.hcm.smooth.txt
data/GM12878/: ccds_all_hg38_breakpoints.bed  ccds_all_hg38_merged100k_GM12878.breakpoints.bed  config.ini  config_dryrun.ini
data/H1ESC/: H1ESC_anchors_3+.bed  H1ESC_anchors_3+_oriented.bed  H1ESC_clusters_3+.bedpe  H1ESC_clusters_3+_oriented.bedpe  ccds_all_hg38_breakpoints.bed  ccds_all_hg38_merged100k_H1ESC.breakpoints.bed  config.ini
data/HFFC6/: HFFC6_anchors_3+.bed  HFFC6_anchors_3+_oriented.bed  HFFC6_clusters_3+.bedpe  HFFC6_clusters_3+_oriented.bedpe  ccds_all_hg38_breakpoints.bed  ccds_all_hg38_merged100k_HFFC6.breakpoints.bed  config.ini
gnome3d/: __main__.py  cli.py  data.py  energy.py  hierarchy.py  io.py  log.py  mc.py  mc_jax.py  mc_numba.py  settings.py  simulate.py  solver.py  solver_jax.py  types.py  util.py
harness/: compare.py  find_region.py  integration.py  scorer.cpp
playground/: 3dgnome_pipeline.ipynb  config_sample.ini  test_run.ipynb
playground/bench/: bench_heatmap_mc.py  bench_jax_floor.py  bench_jax_grad_vs_mc.py  bench_jax_smooth_mc.py  bench_jax_vs_numba_heatmap.py  bench_taichi_smooth_mc.py  bench_torch_smooth_mc.py  profile_mc_calls.py  validate_batched_ib.py  validate_bucket_arcs.py  validate_bucket_heatmap.py  validate_bucket_smooth.py  validate_region_batch.py
src/: __init__.py  data.py  data_loading.py  data_structures.py  distances.py  energy.py  heatmap.py  hierarchy.py  io.py  mc.py  regions.py  scores.py  settings.py  simulate.py  solver.py  tree.py
