[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnome3d-ng"
version = "0.1.0"
description = "3dgnome reimplementation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.59.0",
]

[project.scripts]
gnome3d-ng = "gnome3d.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gnome3d*"]
