[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnome3d-ng"
version = "0.1.0"
description = "3dgnome reimplementation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.59.0",
]

[project.scripts]
gnome3d-ng = "gnome3d.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gnome3d*"]

[tool.pyright]
include = ["gnome3d"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
pythonVersion = "3.11"
pythonPlatform = "Darwin"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnknownParameterType = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportConstantRedefinition = "none"
